increase line height to fix vertical text overflow for tab bar component

--- a/packages/components/src/TabBar/TabBar.scss
+++ b/packages/components/src/TabBar/TabBar.scss
@@ -46,6 +46,7 @@
 
 		& > button {
 			max-width: initial;
+			line-height: 1.3;
 		}
 	}
 }
